<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/registration"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextYourEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistration" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_register"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editTextYourEmailRegister" />

    <EditText
        android:id="@+id/edittextYourNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameRegister"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegister"
        tools:layout_editor_absoluteX="-8dp" />

    <EditText
        android:id="@+id/edittextYourLastNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_register"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edittextYourNameRegister"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/edittextYearRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/how_old_are_you_register"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edittextYourLastNameRegister"
        tools:layout_editor_absoluteX="32dp" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextYearRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>